--- a/configs/rag_config.yaml
+++ b/configs/rag_config.yaml
@@ -2,14 +2,13 @@ chat_endpoint: databricks-dbrx-instruct
 chat_model_parameters:
   max_tokens: 500
   temperature: 0.01
-chat_prompt_template: 'You are a trusted assistant that helps answer questions about
-  troubleshooting diesel engines based only on the provided information. If you do
-  not know the answer to a question, you truthfully say you do not know.  Here is
-  some context which might or might not help you answer: {context}.  Answer directly,
-  do not repeat the question, do not start with something like: the answer to the
-  question, do not add AI in front of your answer, do not say: here is the answer,
-  do not mention the context or the question. Based on this history and context, answer
-  this question: {question}.'
+chat_prompt_template: 'You are a trusted assistant that helps answer questions based
+  only on the provided information. If you do not know the answer to a question, you
+  truthfully say you do not know.  Here is some context which might or might not help
+  you answer: {context}.  Answer directly, do not repeat the question, do not start
+  with something like: the answer to the question, do not add AI in front of your
+  answer, do not say: here is the answer, do not mention the context or the question.
+  Based on this history and context, answer this question: {question}.'
 chat_prompt_template_variables:
 - context
 - question
@@ -19,16 +18,16 @@ chunk_overlap: 100
 chunk_size: 300
 chunk_template: '`{chunk_text}`'
 demo_config:
-  assessment_log_output_uc_fqn: default.josh_melton_databricks_com_rag_eval.`rag_studio-field_service_tickets_chain_assessment_log`
+  assessment_log_output_uc_fqn: default.generated_rag_demo.rag_chain_assessment_log
   chunk_table: default.generated_rag_demo.field_service_tickets_chunked
-  endpoint_name: rag_studio-josh_melton_databricks_com-field_service_tickets
-  inference_table_uc_fqn: default.josh_melton_databricks_com_rag_eval.`rag_studio-field_service_tickets_chain_payload`
-  model_fqdn: default.josh_melton_databricks_com_rag_eval.field_service_tickets_chain
-  request_log_output_uc_fqn: default.josh_melton_databricks_com_rag_eval.`rag_studio-field_service_tickets_chain_request_log`
+  endpoint_name: rag_studio_demo_josh_melton_databricks_com
+  inference_table_uc_fqn: default.generated_rag_demo.rag_chain_payload
+  model_fqdn: default.generated_rag_demo.rag_chain
+  request_log_output_uc_fqn: default.generated_rag_demo.rag_chain_request_log
   source_column_name: issue_description
   source_table: default.generated_rag_demo.field_service_tickets
-  synthetic_eval_set_table_uc_fqn: default.josh_melton_databricks_com_rag_eval.`synthetic_eval_set`
-  target_schema: josh_melton_databricks_com_rag_eval
+  synthetic_eval_set_table_uc_fqn: default.generated_rag_demo.synthetic_eval_set
+  target_schema: generated_rag_demo
 document_source_id: ticket_number
 embedding_endpoint: databricks-bge-large-en
 vector_search_endpoint_name: one-env-shared-endpoint-5
